test/compile_errors/stage1/obj/switch_expression-non_exhaustive_integer_prongs.zig
fn foo(x: u8) void {
    switch (x) {
        0 => {},
    }
}
export fn entry() usize { return @sizeOf(@TypeOf(foo)); }

// switch expression - non exhaustive integer prongs
//
// tmp.zig:2:5: error: switch must handle all possibilities
